updated UI and improved performance

--- a/www/components/add_tags.html
+++ b/www/components/add_tags.html
@@ -3,6 +3,6 @@
                     <div style="float:right !important;color: red;" ng-click="tag_box.show()" class="ti ti-plus pull-right"></div>
                     <b>Add Tags <small>(optional)</small></b>
                     <div class="padding" ng-if="cast.tags.length > 0">
-                        <div ng-include="'components/tag.html'" ng-repeat="tag in post.tags"></div>
+                        <div ng-include="'components/tag.html'" ng-repeat="tag in post.tags track by $index"></div>
                     </div>
             </ion-list>
