--- a/www/components/recasts.html
+++ b/www/components/recasts.html
@@ -4,7 +4,7 @@
        <h5>Recasts</h5>
     </div>
 
-   <div ng-include="'components/cast.html'" ng-repeat="cast in cast.recasts">
+   <div ng-include="'components/cast.html'" ng-repeat="cast in cast.recasts track by $index">
    </div>
 
 </div>
