--- a/www/components/message_listens.html
+++ b/www/components/message_listens.html
@@ -1,7 +1,7 @@
 
   
 <div ng-click="open_listens(cast.listens)" style="float: left !important;width: 100% !important; margin-left: 20px !important;margin-top: 5px !important;font-size: 14px !important;" ng-if="(cast.listens | filter:'!'+cast.user.t_id).length > 0"> 
-    <div class="tiny-photo2" ng-repeat="listener in cast.listens | limitTo:3 | unique:'t_id' | filter:'!'+cast.user.t_id" ng-style="{'background-image':'url('+media+listener.photo+')'}"></div>
+    <div class="tiny-photo2" ng-repeat="listener in cast.listens | limitTo:3 | unique:'t_id' | filter:'!'+cast.user.t_id track by $index" ng-style="{'background-image':'url('+media+listener.photo+')'}"></div>
     &nbsp;   
     <small>  
         <b ng-if="(cast.listens | unique:'t_id' | filter:'!'+cast.user.t_id).length > 0">
