--- a/www/components/subscribe_to.html
+++ b/www/components/subscribe_to.html
@@ -1,6 +1,6 @@
 <div ng-show="!query && suggested_users.length > 0" class="list padding">
     <h4 class="title">Subscribe to</h4>
-    <div ng-include="'components/subscribe_user.html'" ng-repeat="caster in suggested_users">
+    <div ng-include="'components/subscribe_user.html'" ng-repeat="caster in suggested_users track by $index">
     </div>
 </div>
   
